fix json response
- Se corrige response json data
- Se aplica filtro para consulta por brand y description
